<resources>
    <string name="app_name">Emergency Button</string>

    <string name="label_next">Next</string>>
    <!--activity selection component-->
    <string name="label_has_credit_card">¿Do you have credit card?</string>
    <string name="label_man">Man</string>
    <string name="label_woman">Woman</string>
    <string name="label_contacts_list">Contact´s list :</string>
    <string name="label_contact">Contact</string>
    <string name="label_Cellphone">Cellphone</string>
    <string name="example_of_fragments">Blank fragment</string>
    <string name="label_email">email</string>
    <string name="label_modify">Do you want to change something ?</string>
    <string name="label_new">New</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_user">User</string>
    <string name="label_introduce_user">User</string>
    <string name="label_pass">password</string>
    <string name="label_introduce_pass">password</string>
    <string name="label_cuenta">Do not have an account yet?</string>
    <string name="label_name">Name:</string>
    <string name="label_LastName">Lastname:</string>
    <string name="Logo">Logo of Alfombra Roja</string>
    <string name="label_toRegister">To register</string>
    <string name="label_messages">Messages :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>