<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".proyfinal.LoginFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/alfombraroja"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="160dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/tvUser"
        android:text="@string/label_user"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="78dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUser"
        android:hint="@string/label_introduce_user"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvPassword"
        android:text="@string/label_pass"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="159dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/label_introduce_pass"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btContinuar"
        android:text="@string/label_next"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="240dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="105dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCuenta"
        android:text="@string/label_cuenta"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="310dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="85dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>