<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".proyfinal.RegistroActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/alfombraroja"
        android:contentDescription="@string/Logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="160dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>


    <TextView
        android:id="@+id/tvLabelUser"
        android:text="@string/label_user"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="280dp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/tvUserData"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLabelPass"
        android:text="@string/label_pass"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="280dp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/tvPasswordData"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLabelName"
        android:text="@string/label_name"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="280dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNameData"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="225dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLabelLastname"
        android:text="@string/label_LastName"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="280dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLastNameData"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>