<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".proyfinal.ContactosActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPercent"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivlogo"
        android:src="@drawable/alfombraroja"
        app:layout_constraintTop_toTopOf="@id/glTop"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="140dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/tvListaContacts"
        android:text="@string/label_contacts_list"
        android:textSize="15sp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/glTop"
        app:layout_goneMarginTop="198dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spListaContacts"
        app:layout_constraintTop_toTopOf="@id/glTop"
        android:layout_marginTop="197dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:layout_marginEnd="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivperson"
        android:src="@drawable/ic_persona"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/tvContacto"
        android:hint="@string/label_contact"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:layout_marginEnd="60dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivPhone"
        android:src="@drawable/ic_telefono"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/tvPhone"
        android:hint="@string/label_Cellphone"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="80dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivMail"
        android:src="@drawable/ic_sobre"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/tvMail"
        android:hint="@string/label_email"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="140dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btFragNext"
        android:text="@string/label_next"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="115dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvEditContact"
        android:text="@string/label_modify"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/glPercent"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>